; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_sampling.c_sampler_random_init_state.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_sampling.c_sampler_random_init_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sampler_random_init_state(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  store i32 13070, i32* %6, align 4
  %7 = load i64, i64* %3, align 8
  %8 = trunc i64 %7 to i16
  %9 = zext i16 %8 to i32
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 1
  store i32 %9, i32* %11, align 4
  %12 = load i64, i64* %3, align 8
  %13 = ashr i64 %12, 16
  %14 = trunc i64 %13 to i16
  %15 = zext i16 %14 to i32
  %16 = load i32*, i32** %4, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 2
  store i32 %15, i32* %17, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
